2004-05-07  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_mem.cc (fhandler_dev_mem::fhandler_dev_mem): Move
	initialization of "mem_size" from here...
	(fhandler_dev_mem::open): ...to here.  Fix typo in FH_PORT case.

2004-05-07  Gerd Spalink  <Gerd.Spalink@t-online.de>

	* fhandler_dsp.cc (fhandler_dev_dsp::Audio_out::stop): Move delete of
	bigwavebuffer_ so that it is always cleaned, also in child processes.
	(fhandler_dev_dsp::Audio_in::stop): Ditto.
	(fhandler_dev_dsp::close): Stop audio play immediately in case of
	abnormal exit.

2004-05-07  Corinna Vinschen  <corinna@vinschen.de>

	Revert code reversion from 2004-04-03.  So, revert to async I/O again.
	* fhandler.h (status): Add "closed" flag.
	(prepare): New method declaration.
	(wait): Ditto.
	(release): Ditto.
	* fhandler_socket.cc: Don't include wsock_event.h.
	(fhandler_socket::prepare): New method, moved from wsock_event.
	(fhandler_socket::wait): Ditto.
	(fhandler_socket::release): New method.
	(fhandler_socket::recvfrom): Simplify loop.
	(fhandler_socket::recvmsg): Ditto.
	(fhandler_socket::sendto): Ditto.
	(fhandler_socket::sendmsg): Ditto.
	* net.cc: Don't include wsock_event.h.
	(wsock_event::prepare): Remove.
	(wsock_event::wait): Ditto.
	* wsock_event.h: Remove.

2004-05-06  Christopher Faylor  <cgf@alum.bu.edu>

	* thread.cc (pthread::create): Move postcreate call to avoid a
	potential race.
	(pthread::cancelable_wait): Don't allow signal interrupt unless main
	thread.

2004-05-07  Pierre Humblet <pierre.humblet@ieee.org>
	    Christopher Faylor <cgf@timesys.com>

	* path.cc (mount_info::conv_to_posix_path): Return proper status when
	chrooted.

2004-05-06  Pierre Humblet <pierre.humblet@ieee.org>

	* path.cc (path_conv::check): Strip trailing dots and spaces and
	return error if the final component had only dots and spaces.
	(normalize_posix_path): Revert 2004-04-30.
	(chdir): Do not check for trailing spaces. Do not set native_dir 