@@ -1,3 +1,10 @@
+2004-05-08  Pierre Humblet <pierre.humblet@ieee.org>
+            Christopher Faylor  <cgf@timesys.com>
+
+	* syscalls.cc: Include environ.h.
+	(chroot): Set errno in case of path error.  Call getwinenv.
+	* environ.cc: Remove the NO_COPY attribute of conv_envvars.
+
 2004-05-07  Corinna Vinschen  <corinna@vinschen.de>
 
 	* fhandler_mem.cc (fhandler_dev_mem::fhandler_dev_mem): Move
